Game/UIs/css/style.css
@charset 'UTF-8';

@font-face {
  font-family: 'Source Sans Pro';
  src: url('../fonts/SourceSansPro.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Track';
  src: url('../fonts/Track.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Flat-UI-Icons';
  src: url('../fonts/Flat-UI-Icons.eot');
  src: url('../fonts/Flat-UI-Icons.eot?#iefix') format('embedded-opentype'), url('../fonts/Flat-UI-Icons.woff') format('woff'), url('../fonts/Flat-UI-Icons.ttf') format('truetype'), url('../fonts/Flat-UI-Icons.svg#Flat-UI-Icons') format('svg');
  font-weight: normal;
  font-style: normal;
}

/*********************************************************************************/
/* Basic                                                                         */
/*********************************************************************************/

html,
body {
  width: 100%;
  height: 100%;
  overflow: hidden;
  margin: 0;
  padding: 0;

  /* This hides the highlighting on double click */
  -webkit-user-select: none;
  user-select: none;
}

body {
  background: #162B3F;
/*background: transparent;*/
  color: white;
  font-family: 'Source Sans Pro', 'Track', sans-serif;
}

#game-title {
  color: #f1c40f;
  font-size: 9em;
  line-height: 0.9;
  text-align: center;
  margin: 0;

  opacity: 0;
  -webkit-transform: translateY(-20px);
  -webkit-transition: 0.5s all;
  transition: 0.5s all;
  -webkit-transition-delay: 0.5s;
  transition-delay: 0.5s;
}

#sub-title {
  color: #f1c40f;
  font-size: 4em;
  text-align: center;
  margin: 0 0 0.3em 0;

  opacity: 0;
  -webkit-transform: translateY(-20px);
  -webkit-transition: 0.5s all;
  transition: 0.5s all;
  -webkit-transition-delay: 0.6s;
  transition-delay: 0.6s;
}

.loaded #game-title,
.loaded #sub-title {
  -webkit-transform: translateY(0);
  opacity: 1;
}

#wrapper {
  width: 800px;
  margin: 0 auto;
  display: block;
  text-align: center;
}

#start-button {
  display: inline-block;
  width: 50%;
  font-size: 0;
  -webkit-transition: 0.4s font-size;
  transition: 0.4s font-size;
  -webkit-transition-delay: 1.0s;
  transition-delay: 1.0s;
}

.loaded #start-button {
  font-size: 1.25em;
}

#start-game {
  border-radius: 100%;
  width: 4.5em;
  height: 4.5em;
  line-height: 4.5em;
  text-align: center;
  padding: 0;
  position: relative;
  display: inline-block;
  background: #000;
  color: #fff;
  text-decoration: none;
  border: 0;
  cursor: pointer;
  outline: 0;
  -webkit-transition: 0.4s background;
  transition: 0.4s background;
}

#start-game:hover {
  background: #3498db;
}

.loaded #start-game {
  font-size: 3em;
}

.left {
	float: left;
	display: block;
}

.right {
	float: right;
	display: block;
}

/*********************************************************************************/
/* Navigation                                                                    */
/*********************************************************************************/

#nav {
  display: block;
  width: 100%;
  margin-bottom: 1em;
  opacity: 0;
  -webkit-transform: translateY(-20px);
  -webkit-transition: 0.4s all;
  transition: 0.4s all;
  -webkit-transition-delay: 0.7s;
  transition-delay: 0.7s;
}

.loaded #nav {
  -webkit-transform: translateY(0);
  opacity: 1;
}

#nav a {
  position: relative;
  display: inline-block;
  color: #fff;
  width: 200px;
  cursor: pointer;
  margin: 0 auto 0.5em auto;
  font-size: 2em;
  text-decoration: none;
  -webkit-transition: 0.1s color;
  transition: 0.1s color;
}

#nav a:hover {
  color: #3498db;
}

/*********************************************************************************/
/* Credits                                                                       */
/*********************************************************************************/

.developer {
  box-sizing: border-box;
  display: inline-block;
  width: 24.8%;
  margin: 0;
  padding: 0;
  text-align: center;
}

.developer .photo {
  display: block;
  width: 100%;
  max-width: 320px;
  margin: 0 auto;
}

/*********************************************************************************/
/* Flat UI Menu                                                                  */
/*********************************************************************************/

.fui-arrow-right,
.fui-arrow-left,
.fui-cmd,
.fui-check-inverted,
.fui-heart,
.fui-location,
.fui-plus,
.fui-check,
.fui-cross,
.fui-list,
.fui-new,
.fui-video,
.fui-photo,
.fui-volume,
.fui-time,
.fui-eye,
.fui-chat,
.fui-search,
.fui-user,
.fui-mail,
.fui-lock,
.fui-gear,
.fui-radio-unchecked,
.fui-radio-checked,
.fui-checkbox-unchecked,
.fui-checkbox-checked,
.fui-calendar-solid,
.fui-pause,
.fui-play,
.fui-check-inverted-2 {
  display: inline-block;
  font-family: 'Flat-UI-Icons';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
}
.fui-arrow-right:before {
  content: "\e02c";
}
.fui-arrow-left:before {
  content: "\e02d";
}
.fui-cmd:before {
  content: "\e02f";
}
.fui-check-inverted:before {
  content: "\e006";
}
.fui-heart:before {
  content: "\e007";
}
.fui-location:before {
  content: "\e008";
}
.fui-plus:before {
  content: "\e009";
}
.fui-check:before {
  content: "\e00a";
}
.fui-cross:before {
  content: "\e00b";
}
.fui-list:before {
  content: "\e00c";
}
.fui-new:before {
  content: "\e00d";
}
.fui-video:before {
  content: "\e00e";
}
.fui-photo:before {
  content: "\e00f";
}
.fui-volume:before {
  content: "\e010";
}
.fui-time:before {
  content: "\e011";
}
.fui-eye:before {
  content: "\e012";
}
.fui-chat:before {
  content: "\e013";
}
.fui-search:before {
  content: "\e01c";
}
.fui-user:before {
  content: "\e01d";
}
.fui-mail:before {
  content: "\e01e";
}
.fui-lock:before {
  content: "\e01f";
}
.fui-gear:before {
  content: "\e024";
}
.fui-radio-unchecked:before {
  content: "\e02b";
}
.fui-radio-checked:before {
  content: "\e032";
}
.fui-checkbox-unchecked:before {
  content: "\e033";
}
.fui-checkbox-checked:before {
  content: "\e034";
}
.fui-calendar-solid:before {
  content: "\e022";
}
.fui-pause:before {
  content: "\e03b";
}
.fui-play:before {
  content: "\e03c";
}
.fui-check-inverted-2:before {
  content: "\e000";
}
.dropdown-arrow-inverse {
  border-bottom-color: #34495e !important;
  border-top-color: #34495e !important;
}

.checkbox,
.radio {
  margin-bottom: 12px;
  padding-left: 32px;
  position: relative;
  -webkit-transition: color 0.25s linear;
  transition: color 0.25s linear;
  font-size: 14px;
  line-height: 1.5;
}
.checkbox input,
.radio input {
  outline: none !important;
  display: none;
}
.checkbox .icons,
.radio .icons {
  color: #bdc3c7;
  display: block;
  height: 20px;
  left: 0;
  position: absolute;
  top: 0;
  width: 20px;
  text-align: center;
  line-height: 21px;
  font-size: 20px;
  cursor: pointer;
  -webkit-transition: color 0.25s linear;
  transition: color 0.25s linear;
}
.checkbox .icons .first-icon,
.radio .icons .first-icon,
.checkbox .icons .second-icon,
.radio .icons .second-icon {
  display: inline-table;
  position: absolute;
  left: 0;
  top: 0;
  background-color: #ffffff;
  margin: 0;
  opacity: 1;
  filter: alpha(opacity=100);
}
.checkbox .icons .second-icon,
.radio .icons .second-icon {
  opacity: 0;
  filter: alpha(opacity=0);
}
.checkbox:hover,
.radio:hover {
  -webkit-transition: color 0.25s linear;
  transition: color 0.25s linear;
}
.checkbox:hover .first-icon,
.radio:hover .first-icon {
  opacity: 0;
  filter: alpha(opacity=0);
}
.checkbox:hover .second-icon,
.radio:hover .second-icon {
  opacity: 1;
  filter: alpha(opacity=100);
}
.checkbox.checked,
.radio.checked {
  color: #1abc9c;
}
.checkbox.checked .first-icon,
.radio.checked .first-icon {
  opacity: 0;
  filter: alpha(opacity=0);
}
.checkbox.checked .second-icon,
.radio.checked .second-icon {
  opacity: 1;
  filter: alpha(opacity=100);
  color: #1abc9c;
  -webkit-transition: color 0.25s linear;
  transition: color 0.25s linear;
}
.checkbox.disabled,
.radio.disabled {
  cursor: default;
  color: #e6e8ea;
}
.checkbox.disabled .icons,
.radio.disabled .icons {
  color: #e6e8ea;
}
.checkbox.disabled .first-icon,
.radio.disabled .first-icon {
  opacity: 1;
  filter: alpha(opacity=100);
}
.checkbox.disabled .second-icon,
.radio.disabled .second-icon {
  opacity: 0;
  filter: alpha(opacity=0);
}
.checkbox.disabled.checked .icons,
.radio.disabled.checked .icons {
  color: #e6e8ea;
}
.checkbox.disabled.checked .first-icon,
.radio.disabled.checked .first-icon {
  opacity: 0;
  filter: alpha(opacity=0);
}
.checkbox.disabled.checked .second-icon,
.radio.disabled.checked .second-icon {
  opacity: 1;
  filter: alpha(opacity=100);
  color: #e6e8ea;
}
.checkbox.primary .icons,
.radio.primary .icons {
  color: #34495e;
}
.checkbox.primary.checked,
.radio.primary.checked {
  color: #1abc9c;
}
.checkbox.primary.checked .icons,
.radio.primary.checked .icons {
  color: #1abc9c;
}
.checkbox.primary.disabled,
.radio.primary.disabled {
  cursor: default;
  color: #bdc3c7;
}
.checkbox.primary.disabled .icons,
.radio.primary.disabled .icons {
  color: #bdc3c7;
}
.checkbox.primary.disabled.checked .icons,
.radio.primary.disabled.checked .icons {
  color: #bdc3c7;
}
.radio + .radio,
.checkbox + .checkbox {
  margin-top: 10px;
}

